<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scene6">

    <Button
        android:id="@+id/tapeButton1"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:background="@drawable/tape"
        android:fontFamily="@font/yangran"
        android:text="@string/tape1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <Button
        android:id="@+id/tapeButton2"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:background="@drawable/tape2"
        android:fontFamily="@font/yangran"
        android:text="@string/tape2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <Button
        android:id="@+id/tapeButton3"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:background="@drawable/tape3"
        android:fontFamily="@font/yangran"
        android:text="@string/tape3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <Button
        android:id="@+id/tapeButton4"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:background="@drawable/tape4"
        android:fontFamily="@font/yangran"
        android:text="@string/tape4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46" />

    <Button
        android:id="@+id/tapeButton5"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:background="@drawable/tape5"
        android:fontFamily="@font/yangran"
        android:text="@string/tape5"
        android:textColor="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <Button
        android:id="@+id/tapeButton6"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:background="@drawable/tape6"
        android:fontFamily="@font/yangran"
        android:text="@string/tape6"
        android:textColor="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <Button
        android:id="@+id/tapeButton7"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:background="@drawable/tape7"
        android:fontFamily="@font/yangran"
        android:text="@string/tape7"
        android:textColor="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

    <Button
        android:id="@+id/tapeButton8"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:background="@drawable/tape8"
        android:fontFamily="@font/yangran"
        android:text="@string/tape8"
        android:textColor="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@drawable/back2"
        android:backgroundTint="@color/green4A715F"
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>